--- a/pom.xml
+++ b/pom.xml
@@ -30,6 +30,11 @@
       <artifactId>combinatoricslib3</artifactId>
       <version>3.3.0</version>
     </dependency>
+    <dependency>
+      <groupId>org.jfree</groupId>
+      <artifactId>jfreechart</artifactId>
+      <version>1.0.19</version>
+    </dependency>
   </dependencies>
 
   <build>
